# baboon

./: .envrc  .gitignore  .gitmodules  .project-zsh  .scalafmt.conf  CLAUDE.md  LICENSE  LINKING_ISSUES.md  README.md  SCALAJS_SUPPORT.md  a.out  baboon  baboon-upstream-defects-clean.md  baboon-upstream-defects.md  baboon.py  build.sbt  build.sh  cq.toml  defects.md  deps.lock.json  docker-demo-detached.sh  docker-demo.sh  flake.nix  local-build.sh  local-rebuild.sh  local-test.sh  lockfile-config.json  nix-rebuild.sh  prepare-dist.sh  run  shell-linux.nix  shell-mac.nix  shell.nix  tasks.md  test.cpp  test.sh  version.sbt
.mobala/: env.sh  keep.env
.run/: Generate CS files (adt_ compact, wrapped).run.xml  Generate CS files (adt_ full, unwrapped).run.xml  Help.run.xml
baboon-playground/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
devops/: flake-refresh.sh  flake-validate.sh  local-build.sh  prepare-dist.sh  test.sh
docs/: cli-reference.md  decisions.md  defects.md  explorer-mode.md  goals.md  handoffs.md  hypothesis.md  ideas.md  json-codecs.md  language-features.md  ledgers.yaml  lsp-integration.md  milestones.md  new-transpiler-guide.md  questions.md  reviews.md  tasks.md  transport-plumbing.md  ueba-format.md
project/: plugins.sbt
scripts/: check-ci.sh  cross_version_compat.py  swift-xcode.sh  (+2 more)
test/conv-test-rs/: .gitignore  Cargo.toml
test/conv-test-rs/src/: generated_mods.rs  lib.rs  main.rs
test/conv-test-rs/tests/: compat_tests.rs  enum_member_rename.rs
test/services/rs-async/: Cargo.toml  README.md
(+1588 files in other folders)
