[package]
name = "baboon-rs-service-async"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["arbitrary_precision", "preserve_order"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
rust_decimal = { version = "1", features = ["serde-with-str"] }
hex = "0.4"

[features]
default = ["decimal", "json-helpers", "timestamps", "uuids"]
decimal = []
json-helpers = []
timestamps = []
uuids = []
